--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
 
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 #spring.datasource.username=sa
@@ -9,3 +9,4 @@ spring.datasource.password=1234
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
